--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
+    <title>Countries</title>
 </head>
 <body>
+    <header class="header">
+        <h1>Countries</h1>
+    </header>
+<nav>
+    <ul id="main_nav">
+        <li><a href="#sweden" class="active">Sweden</a></li>
+        <li><a href="#norway">Norway</a></li>
+        <li><a href="#peru">Peru</a></li>
+        <li><a href="#india">India</a></li>
+    </ul>
+</nav>    
     
+<h2 id="sweden">Sweden</h2>
+    <p>Sweden has a population of 10 million.</p>
+    <div class="flag"><img src="./images/sweden-flag.gif" alt="Flag of Sweden">
+    </div>
+<hr>
+<h3 id="norway">Norway</h3>
+    <p>Norway has a population of ??? million.</p>
+    <div class="flag"><img src="./images/norway-flag.gif" alt="Flag of Norway">
+    </div>
+<hr>
+<h4 id="peru">Peru</h4>
+    <p>Peru has a population of ??? million.</p>
+    <div class="flag"><img src="./images/peru-flag.gif" alt="Flag of Peru">
+    </div>
+<hr>
+<h5 id="india">India</h5>
+    <p>India has a population of ??? million.</p>
+    <div class="flag"><img src="./images/india-flag.gif" alt="Flag of India">
+    </div>
+    <footer></footer>
 </body>
 </html>
