--- a/india.html
+++ b/india.html
@@ -18,12 +18,12 @@
                 <li><a href="./peru.html">Peru</a></li>
                 <li><a href="./india.html">India</a></li>
             </ul>
-        </nav>    
-    <article> 
-        <h2 id="sweden">Sweden</h2>
-            <p>Sweden has a population of 10 million.</p>
-            <div class="flag"><img src="./images/sweden-flag.gif" alt="Flag of Sweden">
-            </div>
+        </nav>       
+    <article>
+        <h2 id="india">India</h2>
+            <p>India has a population of 1.4 billion.</p>
+            <div class="flag"><img src="./images/india-flag.gif" alt="Flag of India">
+        </div>
     </article>
     </section>    
     <footer>Group2 + Zichun Zhao</footer>
