--- a/norway.html
+++ b/norway.html
@@ -19,13 +19,14 @@
                 <li><a href="./india.html">India</a></li>
             </ul>
         </nav>    
-    <article> 
-        <h2 id="sweden">Sweden</h2>
-            <p>Sweden has a population of 10 million.</p>
-            <div class="flag"><img src="./images/sweden-flag.gif" alt="Flag of Sweden">
+    <article>
+        <h2 id="norway">Norway</h2>
+            <p>Norway has a population of 5.4 million.</p>
+            <div class="flag"><img src="./images/norway-flag.gif" alt="Flag of Norway">
             </div>
     </article>
-    </section>    
-    <footer>Group2 + Zichun Zhao</footer>
+    </section>
+    <footer>Group 2 + Zichun Zhao
+    </footer>
 </body>
 </html>
