--- a/peru.html
+++ b/peru.html
@@ -19,13 +19,13 @@
                 <li><a href="./india.html">India</a></li>
             </ul>
         </nav>    
-    <article> 
-        <h2 id="sweden">Sweden</h2>
-            <p>Sweden has a population of 10 million.</p>
-            <div class="flag"><img src="./images/sweden-flag.gif" alt="Flag of Sweden">
-            </div>
+    <article>
+        <h2 id="peru">Peru</h2>
+        <p>Peru has a population of 34 million.</p>
+        <div class="flag"><img src="./images/peru-flag.gif" alt="Flag of Peru">
+        </div>
     </article>
-    </section>    
+    </section>
     <footer>Group2 + Zichun Zhao</footer>
 </body>
 </html>
