--- a/norway.html
+++ b/norway.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Countries</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <h1>Countries</h1>
+      <h1>Countries</h1>
     </header>
     <section>
-        <nav>
-            <ul id="main_nav">
-                <li><a href="./index.html" class="active">Sweden</a></li>
-                <li><a href="./norway.html">Norway</a></li>
-                <li><a href="./peru.html">Peru</a></li>
-                <li><a href="./india.html">India</a></li>
-            </ul>
-        </nav>    
-    <article>
+      <nav>
+        <ul id="main_nav">
+          <li><a href="./index.html" class="active">Sweden</a></li>
+          <li><a href="./norway.html">Norway</a></li>
+          <li><a href="./peru.html">Peru</a></li>
+          <li><a href="./india.html">India</a></li>
+        </ul>
+      </nav>
+      <article>
         <h2 id="norway">Norway</h2>
-            <p>Norway has a population of 5.4 million.</p>
-            <div class="flag"><img src="./images/norway-flag.gif" alt="Flag of Norway">
-            </div>
-    </article>
+        <p>Norway has a population of 5.4 million.</p>
+        <div class="flag">
+          <img src="./images/norway-flag.gif" alt="Flag of Norway" />
+        </div>
+      </article>
     </section>
-    <footer>Group 2 + Zichun Zhao
-    </footer>
-</body>
+    <footer>Group 2 + Zichun Zhao</footer>
+  </body>
 </html>
