lots of changes made

--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
         </ul>
       </nav>
       <article>
-        <h2 id="sweden">Sweden</h2>
-        <p>Sweden has a population of 10 million.</p>
-        <div class="flag">
-          <img src="./images/sweden-flag.gif" alt="Flag of Sweden" />
-        </div>
+        <h2 class="rubrik">Sweden</h2>
+        <p class="facts">Sweden has a population of 10 million.</p>
+        <img
+          src="./images/sweden-flag.gif"
+          alt="Flag of Sweden"
+          width="500"
+          height="300"
+        />
       </article>
     </section>
     <footer>Group2 + Zichun Zhao</footer>
