--- a/india.html
+++ b/india.html
@@ -20,11 +20,14 @@
         </ul>
       </nav>
       <article>
-        <h2 id="india">India</h2>
-        <p>India has a population of 1.4 billion.</p>
-        <div class="flag">
-          <img src="./images/india-flag.gif" alt="Flag of India" />
-        </div>
+        <h2 class="rubrik">India</h2>
+        <p class="facts">India has a population of 1.4 billion.</p>
+        <img
+          src="./images/india-flag.gif"
+          alt="Flag of India"
+          width="500"
+          height="300"
+        />
       </article>
     </section>
     <footer>Group2 + Zichun Zhao</footer>
