--- a/peru.html
+++ b/peru.html
@@ -20,11 +20,14 @@
         </ul>
       </nav>
       <article>
-        <h2 id="peru">Peru</h2>
-        <p>Peru has a population of 34 million.</p>
-        <div class="flag">
-          <img src="./images/peru-flag.gif" alt="Flag of Peru" />
-        </div>
+        <h2 class="rubrik">Peru</h2>
+        <p class="facts">Peru has a population of 34 million.</p>
+        <img
+          src="./images/peru-flag.gif"
+          alt="Flag of Peru"
+          width="500"
+          height="300"
+        />
       </article>
     </section>
     <footer>Group2 + Zichun Zhao</footer>
