--- a/norway.html
+++ b/norway.html
@@ -20,11 +20,14 @@
         </ul>
       </nav>
       <article>
-        <h2 id="norway">Norway</h2>
-        <p>Norway has a population of 5.4 million.</p>
-        <div class="flag">
-          <img src="./images/norway-flag.gif" alt="Flag of Norway" />
-        </div>
+        <h2 class="rubrik">Norway</h2>
+        <p class="facts">Norway has a population of 5.4 million.</p>
+        <img
+          src="./images/norway-flag.gif"
+          alt="Flag of Norway"
+          width="500"
+          height="300"
+        />
       </article>
     </section>
     <footer>Group 2 + Zichun Zhao</footer>
