--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         />
       </article>
     </section>
-    <footer>Group2 + Zichun Zhao</footer>
+    <footer>Some copyright info and more</footer>
   </body>
 </html>
